--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ h3 {
 }
 body {
   background: rgb(18, 18, 18);
-  padding: 2rem;
 }
 
 .details-div,
@@ -81,11 +80,12 @@ label {
   funka utan att störa något annat så jag kör på det sålänge */
   position: sticky;
 }
+
 .input-group {
   position: relative;
   background-color: rgb(255, 255, 255);
   border-radius: 3rem;
-  padding: 1rem;
+  padding: 0.7rem 2rem;
   border-color: #ffcf41;
   border-style: solid;
 }
@@ -96,4 +96,9 @@ input {
 
 li {
   list-style: none;
+}
+
+span {
+  font-weight: bold;
+  color: #8ed8fc;
 }
