--- a/stars.css
+++ b/stars.css
@@ -1,3 +1,6 @@
+/* Stjärnor helt och hållet hämtat från https://codemyui.com/parallax-pixel-stars-using-pure-css/ 
+Alltså inte min kod, bara med som en kul detalj */
+
 html {
   height: 100%;
 }
